--- a/documentation/asciidoc/stories/assembly_xsite_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_xsite_replication.adoc
@@ -4,11 +4,11 @@
 Set up global {brandname} clusters to back up data across sites.
 
 include::{topics}/con_xsite_replication.adoc[leveloffset=+1]
-//Community
-ifndef::productized[]
+//Community content
+ifdef::community[]
 include::{topics}/proc_xsite_manual_clusterrole.adoc[leveloffset=+1]
 include::{topics}/proc_creating_minikube_site_secrets.adoc[leveloffset=+1]
-endif::productized[]
+endif::community[]
 include::{topics}/proc_creating_sa_tokens.adoc[leveloffset=+1]
 include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+1]
 include::{topics}/proc_configuring_sites.adoc[leveloffset=+1]
