--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -4,6 +4,11 @@
 //
 
 //
+// Conditional statements
+//
+:community:
+
+//
 // Operator resources
 //
 
@@ -45,9 +50,6 @@
 
 :datagridservice: Data Grid Service
 :cacheservice: Cache Service
-
-include::kubectl_cmds.adoc[]
-include::links.adoc[]
 
 // Stable Links
 
