--- a/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
@@ -32,7 +32,7 @@ spec:
       org.jgroups: trace
   expose: <10>
     type: LoadBalancer
-  affinity: <11>
+  affinity <11>
 ----
 
 <1> Names the {brandname} cluster.
