--- a/documentation/asciidoc/topics/ref_label_environment_variables.adoc
+++ b/documentation/asciidoc/topics/ref_label_environment_variables.adoc
@@ -1,29 +1,10 @@
 [id='label_environment_variables-{context}']
 = Global Labels for {ispn_operator}
-Global labels are automatically propagated to all {brandname} resources.
-
-//Downstream
-ifdef::downstream[]
-[NOTE]
-====
-{ispn_operator} automatically applies global metering labels that you can use to monitor your Red Hat subscription details.
-====
-endif::downstream[]
+Global labels are automatically propagated to all {brandname} pods and services.
 
 You can add and modify global labels for {ispn_operator} with the `env` field in the operator yaml.
 
-//Community
-ifdef::community[]
 [source,yaml,options="nowrap",subs=attributes+]
 ----
 include::yaml/publisher_labels.yaml[]
 ----
-endif::community[]
-
-//Downstream
-ifdef::downstream[]
-[source,yaml,options="nowrap",subs=attributes+]
-----
-include::yaml/publisher_labels_downstream.yaml[]
-----
-endif::downstream[]
