--- a/documentation/asciidoc/topics/attributes/links.adoc
+++ b/documentation/asciidoc/topics/attributes/links.adoc
@@ -9,11 +9,17 @@ endif::community[]
 
 :link_tech_preview: https://access.redhat.com/support/offerings/techpreview/[Red Hat Technology Preview Features Support Scope]
 
-:link_os_load_balancer: https://docs.openshift.com/container-platform/4.5/networking/configuring-ingress-cluster-traffic/configuring-ingress-cluster-traffic-load-balancer.html[Configuring ingress cluster traffic using a load balancer]
+:link_olm: https://github.com/operator-framework/operator-lifecycle-manager[Operator Lifecycle Manager]
+
+:link_olm_arch: https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/architecture.md[OLM Architecture]
+
+:link_prometheus_operator: https://github.com/prometheus-operator/prometheus-operator[Prometheus Operator]
+
+//
+//Kubernetes documentation
+//
 
 :link_k8s_load_balancer: https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer[Type LoadBalancer]
-
-:link_os_node_port: https://docs.openshift.com/container-platform/4.5/networking/configuring-ingress-cluster-traffic/configuring-ingress-cluster-traffic-nodeport.html[Configuring ingress cluster traffic using a NodePort]
 
 :link_k8s_node_port: https://kubernetes.io/docs/concepts/services-networking/service/#nodeport[Type NodePort]
 
@@ -23,18 +29,24 @@ endif::community[]
 
 :link_k8s_annotations: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/[Annotations]
 
-:link_os_sa_tokens: https://docs.openshift.com/container-platform/4.5/authentication/using-service-accounts-in-applications.html[Using service accounts in applications]
+:link_k8s_storage: https://kubernetes.io/docs/concepts/storage/persistent-volumes/[Persistent Volumes]
 
-:link_os_crds: https://docs.openshift.com/container-platform/4.5/operators/crds/crd-managing-resources-from-crds.html[Managing resources from Custom Resource Definitions]
+//
+//OpenShift documentation
+//
 
-:link_os_olm: https://docs.openshift.com/container-platform/4.5/operators/understanding/olm-understanding-operatorhub.html[Understanding OperatorHub]
+:link_os_node_port: https://docs.openshift.com/container-platform/4.7/networking/configuring_ingress_cluster_traffic/configuring-ingress-cluster-traffic-nodeport.html[Configuring ingress cluster traffic using a NodePort]
 
-:link_os_olm_adding: https://docs.openshift.com/container-platform/4.5/operators/olm-adding-operators-to-cluster.html#olm-installing-operators-from-operatorhub_olm-adding-operators-to-a-cluster[Approval Strategy]
+:link_os_load_balancer: https://docs.openshift.com/container-platform/4.7/networking/configuring_ingress_cluster_traffic/configuring-ingress-cluster-traffic-load-balancer.html[Configuring ingress cluster traffic using a load balancer]
 
-:link_olm: https://github.com/operator-framework/operator-lifecycle-manager[Operator Lifecycle Manager]
+:link_os_sa_tokens: https://docs.openshift.com/container-platform/4.7/authentication/using-service-accounts-in-applications.html[Using service accounts in applications]
 
-:link_olm_arch: https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/architecture.md[OLM Architecture]
+:link_os_crds: https://docs.openshift.com/container-platform/4.7/operators/crds/crd-managing-resources-from-crds.html[Managing resources from Custom Resource Definitions]
 
-:link_os_monitoring: https://access.redhat.com/documentation/en-us/openshift_container_platform/4.5/html/monitoring/monitoring-your-own-services[Monitoring Services with the OpenShift Cluster Monitoring Stack]
+:link_os_olm: https://docs.openshift.com/container-platform/4.7/operators/understanding/olm-understanding-operatorhub.html[Understanding OperatorHub]
 
-:link_prometheus_operator: https://github.com/prometheus-operator/prometheus-operator[Prometheus Operator]
+:link_os_olm_adding: https://docs.openshift.com/container-platform/4.7/operators/olm-adding-operators-to-cluster.html#olm-installing-operators-from-operatorhub_olm-adding-operators-to-a-cluster[Approval Strategy]
+
+:link_os_monitoring: https://access.redhat.com/documentation/en-us/openshift_container_platform/4.7/html-single/monitoring/index#configuring-the-monitoring-stack[Configuring the monitoring stack]
+
+:link_os_storage: https://access.redhat.com/documentation/en-us/openshift_container_platform/4.7/html-single/storage/index#configuring-persistent-storage[Configuring persistent storage]
