--- a/documentation/asciidoc/stories/assembly_creating_infinispan_caches.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_infinispan_caches.adoc
@@ -37,8 +37,14 @@ When using `Cache` CRs, the following rules apply:
 * If you edit caches in the {osweb}, the changes are reflected through the user interface but do not take effect on the {brandname} cluster. You cannot edit caches. To change cache configuration, you must first delete the cache through the console or CLI and then re-create the cache.
 * Deleting `Cache` CRs in the {osweb} does not remove caches from {brandname} clusters. You must delete caches through the console or CLI.
 
-include::{topics}/proc_adding_cache_auth_secrets.adoc[leveloffset=+1]
-include::{topics}/proc_using_custom_cache_auth.adoc[leveloffset=+2]
+[NOTE]
+====
+In previous versions, you need to add credentials to a secret so that {ispn_operator} can access your cluster when creating caches.
+
+That is no longer necessary.
+{ispn_operator} uses the **operator** user and corresponding password to perform cache operations.
+====
+
 include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+1]
 
