--- a/documentation/asciidoc/topics/proc_creating_service_monitor.adoc
+++ b/documentation/asciidoc/topics/proc_creating_service_monitor.adoc
@@ -9,14 +9,22 @@ Define a service monitor instances that configures Prometheus to monitor your
 
 .Procedure
 
-. Create an authentication secret that contains {brandname} credentials so that Prometheus can authenticate with your {brandname} cluster.
+. Retrieve the credentials for {ispn_operator}.
 +
 [source,options="nowrap",subs=attributes+]
 ----
 include::yaml/basic_auth.yaml[]
 ----
 +
-<1> Specifies an application user. `developer` is the default.
+. Create an authentication secret that contains the credentials. +
+This allows Prometheus to authenticate with your {brandname} cluster and retrieve metrics.
++
+[source,options="nowrap",subs=attributes+]
+----
+include::yaml/basic_auth.yaml[]
+----
++
+<1> Specifies the **operator** user.
 <2> Specifies the corresponding password.
 +
 . Add the authentication secret to your Prometheus namespace.
@@ -35,21 +43,11 @@ include::yaml/service_monitor.yaml[]
 +
 <1> Names the service monitor instances.
 <2> Specifies the namespace of your Prometheus stack.
-<3> Sets the port of `11222` for the {brandname} metrics endpoint.
+<3> Sets the port of `11223` for the {brandname} metrics endpoint.
 <4> Sets the path where {brandname} exposes metrics.
-<5> Specifies the authentication secret with {brandname} credentials.
-<6> Specifies that {brandname} clusters use endpoint encryption.
-//Community
-ifdef::community[]
-If you do not use endpoint encryption, remove `spec.endpoints.scheme`.
-endif::community[]
-<7> Specifies the Common Name (CN) of the TLS certificate for {brandname} encryption. If you use an {openshiftshort} service certificate, the CN matches the `metadata.name` resource for your {brandname} cluster.
-//Community
-ifdef::community[]
-If you do not use endpoint encryption, remove `spec.endpoints.tlsConfig`.
-endif::community[]
-<8> Specifies the namespace of your {brandname} cluster.
-<9> Specifies the name of your {brandname} cluster.
+<5> Specifies the authentication secret with {ispn_operator} credentials.
+<6> Specifies the namespace of your {brandname} cluster.
+<7> Specifies the name of your {brandname} cluster.
 +
 . Add the service monitor instance to your Prometheus namespace.
 +
