--- a/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites_automatically.adoc
@@ -82,12 +82,15 @@ The preceding configuration decreases logging for JGroups TCP and RELAY2 protoco
 +
 . Configure nodes with any other {datagridservice} resources.
 . Apply the `Infinispan` CRs.
-. Check node logs to verify that {brandname} clusters form a cross-site view, for example:
+. Verify that {brandname} clusters form a cross-site view.
+.. Retrieve the `Infinispan` CR.
 +
 [source,options="nowrap",subs=attributes+]
 ----
-include::cmd_examples/oc_grep_xsite.adoc[]
+include::cmd_examples/get_infinispan.adoc[]
 ----
++
+.. Check for the `type: CrossSiteViewFormed` condition.
 
 .Next steps
 
