--- a/documentation/asciidoc/topics/proc_configuring_sites.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites.adoc
@@ -10,12 +10,9 @@ over a dedicated JGroups transport channel for replicating data.
 .Procedure
 
 . Create an `Infinispan` CR for each {brandname} cluster.
-. Specify a matching name for each {brandname} cluster with metadata.name`.
 . Specify the name of the local site with `spec.service.sites.local.name`.
 . Provide the name, URL, and secret for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
-. Specify cluster names and namespaces for {brandname} clusters at each site with the the `clusterName` and `namespace` fields, if necessary.
-+
-You need to specify cluster names and namespaces for backup locations only if they do not match those for the local {brandname} cluster.
+. If {brandname} cluster names or namespaces at the remote site do not match the local site, specify those values with the `clusterName` and `namespace` fields.
 +
 The following are example `Infinispan` CR definitions for **LON** and **NYC**:
 +
@@ -41,8 +38,8 @@ spec:
           url: openshift://api.rhdg-lon.openshift-aws.myhost.com:6443
           secretName: lon-token
         - name: NYC
-          clusterName: {example_crd_name}
-          namespace: {example_namespace}
+          clusterName: nyc-cluster
+          namespace: nyc-cluster-namespace
           url: openshift://api.rhdg-nyc.openshift-aws.myhost.com:6443
           secretName: nyc-token
 ----
@@ -54,7 +51,7 @@ spec:
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  name: {example_crd_name}
+  name: nyc-cluster
 spec:
   replicas: 2
   service:
