--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -6,7 +6,8 @@ include::{stories}/assembly_shutting_down.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_network.adoc[leveloffset=+1]
 include::{stories}/assembly_securing_connections.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_xsite.adoc[leveloffset=+1]
-include::{stories}/assembly_creating_infinispan_caches.adoc[leveloffset=+1]
+include::{stories}/assembly_cache_cr.adoc[leveloffset=+1]
+include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_connecting_clients.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_prometheus.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
