--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -28,6 +28,7 @@
 :ispn_operator: Infinispan Operator
 :ispn_operator_version: 2.1
 :ispn_version: 12.0
+:server_image_version: 12.0
 :brandname: Infinispan
 :fullbrandname: Infinispan
 :datagridservice: Data Grid Service
