--- a/documentation/asciidoc/topics/proc_configuring_sites.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_sites.adoc
@@ -6,13 +6,26 @@ over a dedicated JGroups transport channel for replicating data.
 .Prerequisites
 
 * Create secrets that contain service account tokens for each backup location.
+* Ensure that all clusters are {datagridservice} nodes.
+* Ensure that {k8s} project names match.
++
+[IMPORTANT]
+====
+To perform cross-site replication, {ispn_operator} requires {brandname}
+clusters to have the same name and run in matching namespaces.
+
+For example, you create a cluster at **LON** in a project named
+`xsite-cluster`. The cluster at **NYC** must also run in a project
+named `xsite-cluster`.
+====
 
 .Procedure
 
 . Create an `Infinispan` CR for each {brandname} cluster.
+. Specify a matching name for each {brandname} cluster with `metadata.name`.
 . Specify the name of the local site with `spec.service.sites.local.name`.
+. Set the expose service type for the local site with `spec.service.sites.local.expose.type`.
 . Provide the name, URL, and secret for each {brandname} cluster that acts as a backup location with `spec.service.sites.locations`.
-. If {brandname} cluster names or namespaces at the remote site do not match the local site, specify those values with the `clusterName` and `namespace` fields.
 +
 The following are example `Infinispan` CR definitions for **LON** and **NYC**:
 +
@@ -38,8 +51,6 @@ spec:
           url: openshift://api.rhdg-lon.openshift-aws.myhost.com:6443
           secretName: lon-token
         - name: NYC
-          clusterName: nyc-cluster
-          namespace: nyc-cluster-namespace
           url: openshift://api.rhdg-nyc.openshift-aws.myhost.com:6443
           secretName: nyc-token
 ----
@@ -51,7 +62,7 @@ spec:
 apiVersion: infinispan.org/v1
 kind: Infinispan
 metadata:
-  name: nyc-cluster
+  name: {example_crd_name}
 spec:
   replicas: 2
   service:
@@ -66,8 +77,6 @@ spec:
           url: openshift://api.rhdg-nyc.openshift-aws.myhost.com:6443
           secretName: nyc-token
         - name: LON
-          clusterName: {example_crd_name}
-          namespace: {example_namespace}
           url: openshift://api.rhdg-lon.openshift-aws.myhost.com:6443
           secretName: lon-token
 ----
