--- a/documentation/asciidoc/topics/ref_xsite_crd.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd.adoc
@@ -14,7 +14,7 @@ ifdef::community[]
 * Use `NodePort` for local clusters on the same network.
 * Use `LoadBalancer` for independent {openshiftshort} clusters.
 <4> Provides connection information for all backup locations.
-<5> Specifies a backup location that matches `.spec.service.sites.local.name`.
+<5> Specifies a backup location that matches `spec.service.sites.local.name`.
 <6> Specifies a backup location.
 //* Use `xsite://` if the backup location has a static hostname and port.
 * Use `minikube://` if the backup location is a Minikube instance.
@@ -27,10 +27,8 @@ This secret contains different authentication objects, depending on your
 Kubernetes environment.
 ====
 +
-<8> Specifies the cluster name at the backup location if it is different to the cluster name at the local site.
-<9> Specifies the namespace of the {brandname} cluster at the backup location if it does not match the namespace at the local site.
-<10> Logs error messages for the JGroups TCP protocol.
-<11> Logs fatal messages for the JGroups RELAY2 protocol.
+<8> Logs error messages for the JGroups TCP protocol.
+<9> Logs fatal messages for the JGroups RELAY2 protocol.
 endif::community[]
 
 //Downstream
@@ -39,11 +37,9 @@ ifdef::downstream[]
 <2> Names the local site for a {brandname} cluster.
 <3> Specifies `LoadBalancer` as the service that handles communication between backup locations.
 <4> Provides connection information for all backup locations.
-<5> Specifies a backup location that matches `.spec.service.sites.local.name`.
+<5> Specifies a backup location that matches `spec.service.sites.local.name`.
 <6> Specifies the URL of the {openshiftshort} API for the backup location.
 <7> Specifies the secret that contains the service account token for the backup site.
-<8> Specifies the cluster name at the backup location if it is different to the cluster name at the local site.
-<9> Specifies the namespace of the {brandname} cluster at the backup location if it does not match the namespace at the local site.
-<10> Logs error messages for the JGroups TCP protocol.
-<11> Logs fatal messages for the JGroups RELAY2 protocol.
+<8> Logs error messages for the JGroups TCP protocol.
+<9> Logs fatal messages for the JGroups RELAY2 protocol.
 endif::downstream[]
