ISPN-12853 grafana dashboard docs

--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -9,9 +9,9 @@ include::{stories}/assembly_setting_up_xsite.adoc[leveloffset=+1]
 include::{stories}/assembly_cache_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
 include::{stories}/assembly_connecting_clients.adoc[leveloffset=+1]
-include::{stories}/assembly_setting_up_prometheus.adoc[leveloffset=+1]
+include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
+include::{stories}/assembly_logging.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
 include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_deploying_code.adoc[leveloffset=+1]
-include::{stories}/assembly_monitoring_logs.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
