--- a/documentation/asciidoc/topics/ref_default_credentials.adoc
+++ b/documentation/asciidoc/topics/ref_default_credentials.adoc
@@ -1,13 +1,15 @@
 [id='default_credentials-{context}']
 = Default Credentials
-{ispn_operator} generates base64-encoded default credentials stored in an authentication secret named `{example_crd_name}-generated-secret`
+{ispn_operator} generates base64-encoded default credentials stored in an authentication secrets named
 
 |===
-|Username |Description
+|Username |Secret name|Description
 
 |`developer`
+|`{example_crd_name}-generated-secret`
 |Default application user.
 
 |`operator`
-|Internal user that interacts with {brandname} clusters. 
+|`{example_crd_name}-generated-operator-secret`
+|User that interacts with {brandname} resources.
 |===
