XSite docs set log level to fatal instead of error #936

--- a/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_automatic.adoc
@@ -30,7 +30,7 @@ Kubernetes environment.
 <8> Specifies the cluster name at the backup location if it is different to the cluster name at the local site.
 <9> Specifies the namespace of the {brandname} cluster at the backup location if it does not match the namespace at the local site.
 <10> Logs error messages for the JGroups TCP protocol.
-<11> Logs fatal messages for the JGroups RELAY2 protocol.
+<11> Logs error messages for the JGroups RELAY2 protocol.
 endif::community[]
 
 //Downstream
@@ -45,5 +45,5 @@ ifdef::downstream[]
 <8> Specifies the cluster name at the backup location if it is different to the cluster name at the local site.
 <9> Specifies the namespace of the {brandname} cluster at the backup location if it does not match the namespace at the local site.
 <10> Logs error messages for the JGroups TCP protocol.
-<11> Logs fatal messages for the JGroups RELAY2 protocol.
+<11> Logs error messages for the JGroups RELAY2 protocol.
 endif::downstream[]
