--- a/documentation/asciidoc/topics/ref_xsite_crd_manual.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd_manual.adoc
@@ -22,4 +22,4 @@ endif::downstream[]
 <5> Specifies a backup location that matches `.spec.service.sites.local.name`.
 <6> Specifies the static URL for the backup location in the format of `infinispan+xsite://<hostname>:<port>`. The default port is `7900`.
 <7> Logs error messages for the JGroups TCP protocol.
-<8> Logs fatal messages for the JGroups RELAY2 protocol.
+<8> Logs error messages for the JGroups RELAY2 protocol.
