--- a/documentation/asciidoc/stories/assembly_automatically_connecting_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_automatically_connecting_clusters.adoc
@@ -10,13 +10,28 @@ To automatically connect {brandname} clusters, {ispn_operator} in each {openshif
 ====
 
 include::{topics}/con_xsite_replication.adoc[leveloffset=+1]
+
 //Community
 ifdef::community[]
-include::{topics}/proc_xsite_manual_clusterrole.adoc[leveloffset=+1]
-include::{topics}/proc_creating_kubernetes_site_secrets.adoc[leveloffset=+1]
+== {k8s} clusters
+Apply cluster roles and then create site access secrets if you run {ispn_operator} on vanilla {k8s} or minikube.
+
+include::{topics}/proc_xsite_manual_clusterrole.adoc[leveloffset=+2]
+include::{topics}/proc_creating_kubernetes_site_secrets.adoc[leveloffset=+2]
+
+== {openshiftshort} clusters
+Create and exchange service account tokens if you run {ispn_operator} on vanilla {k8s} or minikube.
+
+include::{topics}/proc_creating_sa_tokens.adoc[leveloffset=+2]
+include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+2]
 endif::community[]
+
+//Downstream content
+ifdef::downstream[]
 include::{topics}/proc_creating_sa_tokens.adoc[leveloffset=+1]
 include::{topics}/proc_exchanging_sa_tokens.adoc[leveloffset=+1]
+endif::downstream[]
+
 include::{topics}/proc_configuring_sites_automatically.adoc[leveloffset=+1]
 include::{topics}/ref_xsite_crd_automatic.adoc[leveloffset=+1]
 
